--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@ body {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   gap: 12px;
+  padding:20px 0px;
 }
 
 .item {
@@ -128,7 +129,7 @@ body {
 .overlay .image-icon {
   width: 30px;
   height: 30px;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
   overflow: visible;
   cursor: pointer;
 }
@@ -264,7 +265,7 @@ body {
 
 /* Logo */
 .header-logo img {
-    width: 100%;
+    width: 90%;
     height: auto;
 }
 
@@ -298,3 +299,4 @@ body {
         cursor: pointer;
     }
 }
+
