--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 }
 .section-one {
   max-width: 100%;
-  padding: 0px 20px;
+  padding: 0px 20px 0px 55px;
   flex: 1;
 }
 .footer {
@@ -252,7 +252,7 @@ body {
   }
 }
 
-@media (max-width:480px){
+@media (max-width:450px){
 
   .gallery {
     grid-template-columns: 1fr;
@@ -321,4 +321,3 @@ body {
         cursor: pointer;
     }
 }
-
