Refactor CSS styles for improved layout and responsiveness

--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ body {
   }
   .section-one {
   max-width: 100%;
-  padding: 0px 20px;
+  padding: 0px 20px!important;
   flex: 1;
 }
   .sidebar-header {
